  lists, similar to editing the encoding options lists. This also fixes
  feature request #515. (Dale Anson)

}}}
{{{ Miscellaneous

}}}
{{{ API Changes

- new org.gjt.sp.utils.GenericGUIUtilities class, containing bits of
  org.gjt.sp.jedit.GUIUtilities suitable for the standalone TextArea
  package; all methods kept but deprecated and proxies (Eric Le Lay).

}}}
{{{ Editing

- Mode for m4 macro processor language (Patch #586 - Jack J. Woehr)

- Drawj2d edit mode (Patch #573 - A. Vontobel)

- Rust edit mode raw string fix (Patch #575 -  Jordan Miner)

- New mode for Mavscript 2.0 (Patch #574 - A. Vontobel)

- New mode for swift (Patches #587 -  Wayne Zhang)

- New mode for Java 9 module-info.java files (Dale Anson)

}}}

}}}

{{{ Version 5.3.0

Thanks to Björn "Vampire" Kautler, Alan Ezust, Makarius, Jakub Holý,
Mark Corbin, Matt Galligan, Kevin Hunter Kesling, Darien Brown,
Matthieu Casanova, Sergey Mashkov, Dale Anson, Kevin Leblanc,
Marcelo Vanzin, Jordan Miner, yaraba, Marc M. Adkins, and Eric Le Lay for
contributing to this release.

{{{ Bug Fixes

- JEditBuffer.isFoldEnd() was unable to detect the fold end when it was the
  last line (#3917 - Matthieu Casanova)

- More accurate wrap margin calculation (Patch#555 - Makarius)

- Fix AWT thread-safety issue in VFSManager.error(). (Marcelo Vanzin)

- Order of unsorted buffers now preserved in View.getBuffers()
  (Patch # 548 - Kevin Leblanc)

- Support for negative line spacing (Patch #535 - Makarius)

- Fix bug #3671: autodetect text file encoding in HelpViewer
  (patch #540 - Eric Le Lay)

- Fix bug #3881, non-capturing lookahead in regex search didn't work.
  (Dale Anson)

- Fix bug #3184: File browser completion dives into wrong directory
  (Eric Le Lay)

- Fix bug #2833 Plugin jars dependencies not removed (Eric Le Lay)

- Fix bug #3911, text area was scrolling to the left when saving. (Dale Anson)

- Fix bug #3599 Key typing in Install panel. Search Field gets focus on show