@@ -22,11 +22,11 @@
 			<END>*/</END>
 		</SPAN>
 
-		<SPAN TYPE="LITERAL1" ESCAPE="\" NO_LINE_BREAK="TRUE">
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
-		<SPAN TYPE="LITERAL1" ESCAPE="\" NO_LINE_BREAK="TRUE">
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
 			<BEGIN>'</BEGIN>
 			<END>'</END>
 		</SPAN>
@@ -70,8 +70,10 @@
 			<KEYWORD1>Call</KEYWORD1>
 			<KEYWORD1>Do</KEYWORD1>
 			<KEYWORD1>Drop</KEYWORD1>
+			<KEYWORD1>End</KEYWORD1>
 			<KEYWORD1>Exit</KEYWORD1>
 			<KEYWORD1>Expose</KEYWORD1>
+			<KEYWORD1>Forever</KEYWORD1>
 			<KEYWORD1>Forward</KEYWORD1>
 			<KEYWORD1>Guard</KEYWORD1>
 			<KEYWORD1>If</KEYWORD1>
@@ -80,6 +82,7 @@
 			<KEYWORD1>Leave</KEYWORD1>
 			<KEYWORD1>Nop</KEYWORD1>
 			<KEYWORD1>Numeric</KEYWORD1>
+			<KEYWORD1>Otherwise</KEYWORD1>
 			<KEYWORD1>Parse</KEYWORD1>
 			<KEYWORD1>Procedure</KEYWORD1>
 			<KEYWORD1>pull</KEYWORD1>
@@ -89,8 +92,9 @@
 			<KEYWORD1>reply</KEYWORD1>
 			<KEYWORD1>Return</KEYWORD1>
 			<KEYWORD1>Say</KEYWORD1>
-			<KEYWORD1>Seleect</KEYWORD1>
+			<KEYWORD1>Select</KEYWORD1>
 			<KEYWORD1>Signal</KEYWORD1>
+			<KEYWORD1>Then</KEYWORD1>
 			<KEYWORD1>Trace</KEYWORD1>
 			<KEYWORD1>use</KEYWORD1>
 			<KEYWORD1>Class</KEYWORD1>
@@ -102,7 +106,10 @@
 			<KEYWORD1>Self</KEYWORD1>
 			<KEYWORD1>Sigl</KEYWORD1>
 			<KEYWORD1>Super</KEYWORD1>
-			<KEYWORD2>Abbrev</KEYWORD2>
+			<KEYWORD1>Super</KEYWORD1>
+			<KEYWORD1>When</KEYWORD1>
+			<KEYWORD1>While</KEYWORD1>
+  			<KEYWORD2>Abbrev</KEYWORD2>
 			<KEYWORD2>Abs</KEYWORD2>
 			<KEYWORD2>Address</KEYWORD2>
 			<KEYWORD2>Arg</KEYWORD2>
